--- a/pareidolia-desktop/images.html
+++ b/pareidolia-desktop/images.html
@@ -163,11 +163,11 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="navbar-left">
-            <div class="navbar-title" id="navbar-name">Project</div>
+            <div class="navbar-title" id="navbar-name">Dataset</div>
             <div class="navbar-path" id="navbar-path">Loading...</div>
         </div>
         <div class="navbar-right">
-            <button class="navbar-btn" onclick="window.location.href='home.html'">← Back to Projects</button>
+            <button class="navbar-btn" onclick="window.location.href='home.html'">← Back to Models</button>
         </div>
     </nav>
 
