--- a/pareidolia-desktop/train.html
+++ b/pareidolia-desktop/train.html
@@ -20,11 +20,11 @@ spesific datasets to use in the model.
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="navbar-left">
-            <div class="navbar-title" id="navbar-name">Project</div>
+            <div class="navbar-title" id="navbar-name">Model</div>
             <div class="navbar-path" id="navbar-path">Loading...</div>
         </div>
         <div class="navbar-right">
-            <button class="navbar-btn" onclick="window.location.href='index.html'">← Back to Projects</button>
+            <button class="navbar-btn" onclick="window.location.href='index.html'">← Back to Models</button>
         </div>
     </nav>
 
